2004-05-02 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b80

	* New: Add possibility to add comments without popup, but inside view_photo

	* Change: Beatified appereance of comments.

2004-05-02 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b79

	* Change: Moved all voting functions from util.php to lib/voting.php

	* Change: Tweaked view_photo.php

	* Change: Added function displayPhotoFields() so we a unified display.

	* Fix: Wrong filename for validation in extra_fields.php

2004-05-01 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b78

	* Fix: Corrected Typo that causes Poll result not be displayed.
	       (Introduced in 1.4.4-cvs-b66/67)

2004-05-01 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b77

	* New: Added isLoggedIn to phpBB2 Users.

	* New: When a user is logged in, his/her Username is displayed in
	       view_album and view_photo.

	* New: Added function displayName() to classes/User.php

	* Change: Tweaked getCaptionName in classes/Album.php

	* Change: Translation related changes in captionator.

2004-05-01  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b76

	* Fix: poll_properties was not properly formatting the poll key values
	  in the <input> tags.  Thanks to Asher Choen for finding this.

2004-04-30  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-75
	
	* Change: Use strnatcasecmp instead of strnatcmp in sorting by filename
          and caption (Tracker #945228)

2004-04-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b74

	* Fix: Missing )

2004-04-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b73

	* Change: Remove unused function parameter from AlbumItem::getPhotoId()
	  and Image::getId() - Thanks to Adventure for finding this

	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&t=16143

2004-04-29 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b72

	* New: Added extra field for Alttext/title/onMouseover.

	* Change: Added optional paramter to getExtraFields in Album.php.
		  If set to false not all extra Fields are returned.
