@@ -24,7 +24,7 @@ includeHtmlWrap("wrapper.header");
               <tr>
                 <td class="mod_toplight_left" align="right"></td>
                 <td nowrap class="head" align="left">
-                  &nbsp;<?php echo $gallery->app->galleryTitle ?> :: Search &nbsp;
+                  &nbsp;<?php echo $gallery->app->galleryTitle ?> :: <?php echo _("Search"); ?> &nbsp;
                 </td>
                 <td class="mod_toplight_right" align="left"></td>
               </tr>
