@@ -1,3 +1,9 @@
+2004-05-02 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b81
+
+	* Fix: Border was not correct around breadcrumb table.
+
+	* Change: HTML and UI beautification and valid HTML in search.php
+
 2004-05-02 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b80
 
 	* New: Add possibility to add comments without popup, but inside view_photo
